# RESIZE_IMAGE_FOR_SOCIAL

./: Cargo.toml  README.md
src/: file_utils.rs  image_adjust.rs  image_config.rs  image_converter.rs  image_resizer.rs  image_rotate.rs  io_operations.rs  main.rs  rotate.rs  social_plataform.rs
src/app/: convert_request.rs  handlers.rs  handlers_request.rs  image_utils.rs  mod.rs  resize_request.rs  rotate_request.rs  router.rs
src/interfaces/: cli.rs  web.rs
src/utils/: file_utils.rs  mod.rs  read_input.rs
static/: index.html  script.js  style.css
static/js/: adjustImage.js  buttonControl.js  encodeImageFile.js  imageDownload.js  imagePreview.js  imageProcessing.js  prepareRequestData.js  readFormData.js  script.js
