[package]
name = "RESIZE_IMAGE_FOR_SOCIAL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
actix-web = "4.0"
actix-files = "0.6"
actix-multipart = "0.4"
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.13"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

